# tams_pr2_azure_kinect

./: CMakeLists.txt  README.md  package.xml
config/: azure_kinect_rgb_000439520212_1536P.yaml
launch/: azure_on_pr2.launch  microphones.launch
