<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_azure_kinect</name>
  <version>0.0.0</version>
  <description>The tams_pr2_azure_kinect package</description>

  <maintainer email="me@v4hn.de">Michael Goerner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>azure_kinect_ros_driver</build_depend>
  <build_export_depend>azure_kinect_ros_driver</build_export_depend>
  <exec_depend>azure_kinect_ros_driver</exec_depend>

</package>
